--- a/EPA_AQI_DATA_LOAD.ipynb
+++ b/EPA_AQI_DATA_LOAD.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# US EPA Air Quality System API\n",
-    "This section of code goes through how I grabbed AQI data from the EPA. A lot of functions used in this code were taken from [this](https://colab.research.google.com/drive/1bxl9qrb_52RocKNGfbZ5znHVqFDMkUzf) notebook, I will go into greater detail on this fact throughout the notebook."
+    "This section of code goes through how I grabbed AQI data from the EPA. A lot of functions used in this code were taken from [this](https://colab.research.google.com/drive/1bxl9qrb_52RocKNGfbZ5znHVqFDMkUzf) notebook, I will go into greater detail on this fact throughout the notebook. The code to make the 'signup request' from the API was ommited for privacy reasons, see linked notebook for information on how to sign up. "
    ]
   },
   {
@@ -16,6 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# THIS SECTION OF CODE WAS TAKEN FROM THE SECOND CELL FROM THE STATED NOTEBOOK\n",
+    "\n",
     "import requests\n",
     "\n",
     "API_REQUEST_URL = 'https://aqs.epa.gov/data/api'\n",
@@ -63,8 +65,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "USERNAME = \"petermohammadi@gmail.com\"\n",
-    "APIKEY = 'goldgazelle23'\n",
+    "USERNAME = \"fake_name@gmail.com\"\n",
+    "APIKEY = 'fake_password'\n",
     "#   Gaseous AQI pollutants CO, SO2, NO2, and O2\n",
     "AQI_PARAMS_GASEOUS = \"42101,42401,42602,44201\"\n",
     "#\n",
@@ -79,6 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# THIS SECTION OF CODE WAS TAKEN FROM THE 13th CELL FROM THE STATED NOTEBOOK\n",
     "CITY_LOCATIONS = {\n",
     "    'mine' :       {'city'   : 'Loveland',\n",
     "                       'county' : 'Larimer',\n",
@@ -145,6 +148,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# THIS SECTION OF CODE WAS TAKEN FROM THE 15th CELL FROM THE STATED NOTEBOOK\n",
+    "\n",
     "EXTRACTION_FIELDS = ['sample_duration','observation_count','arithmetic_mean','aqi']\n",
     "\n",
     "#\n",
@@ -203,6 +208,15 @@
     "#    json.dump(extract_particulate, f)\n",
     "print(json.dumps(extract_particulate,indent=4))\n",
     "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c4a9142",
+   "metadata": {},
+   "source": [
+    "## Getting data from 1963 to 2023\n",
+    "This code was made by me and by the help of ChatGPT. We pull in the requests every year and store them into a JSON file to be used in the `project` file. I gave chatgpt information on what I used to load in the AQI data (ie: `request_daily_summary` and `extract_summary_from_response`), and asked it: \"Make me code to store this data from 1963 - 2023 in seperate JSON files\". "
    ]
   },
   {
